--- a/package.json
+++ b/package.json
@@ -3,17 +3,15 @@
     "displayName": "markdown-goplay",
     "description": "it runs go source in markdown and writes output.",
     "publisher": "74th",
-    "version": "0.0.1",
+    "version": "0.1.1",
     "engines": {
-        "vscode": "^1.34.0"
-    },
+        "vscode": "^1.76.0"
+      },
     "categories": [
         "Other"
     ],
-    "activationEvents": [
-        "onCommand:markdown-goplay.execute-cursor"
-    ],
-    "main": "./out/extension.js",
+    "activationEvents": [],
+    "main": "./dist/extension.js",
     "contributes": {
         "commands": [
             {
@@ -54,18 +52,30 @@
         }
     },
     "scripts": {
-        "vscode:prepublish": "npm run compile",
-        "compile": "tsc -p ./",
-        "watch": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "npm run compile && node ./node_modules/vscode/bin/test"
+        "vscode:prepublish": "npm run package",
+        "compile": "webpack",
+        "watch": "webpack --watch",
+        "package": "webpack --mode production --devtool hidden-source-map",
+        "compile-tests": "tsc -p . --outDir out",
+        "watch-tests": "tsc -p . -w --outDir out",
+        "pretest": "npm run compile-tests && npm run compile && npm run lint",
+        "lint": "eslint src --ext ts",
+        "test": "node ./out/test/runTest.js"
     },
     "devDependencies": {
-        "typescript": "^3.4.5",
-        "vscode": "^1.1.37",
-        "tslint": "^5.12.1",
-        "@types/node": "^10.12.21",
-        "@types/mocha": "^2.2.42"
-    },
-    "dependencies": {}
+        "@types/vscode": "^1.76.0",
+        "@types/glob": "^8.1.0",
+        "@types/mocha": "^10.0.1",
+        "@types/node": "16.x",
+        "@typescript-eslint/eslint-plugin": "^5.53.0",
+        "@typescript-eslint/parser": "^5.53.0",
+        "eslint": "^8.34.0",
+        "glob": "^8.1.0",
+        "mocha": "^10.2.0",
+        "typescript": "^4.9.5",
+        "ts-loader": "^9.4.2",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^5.0.1",
+        "@vscode/test-electron": "^2.2.3"
+    }
 }
